--- a/test_project/tests_fr.slides.html
+++ b/test_project/tests_fr.slides.html
@@ -13220,7 +13220,7 @@ afin de déterminer la performance.</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Tests-unitaires">Tests unitaires<a class="anchor-link" href="#Tests-unitaires">&#182;</a></h2><p>Le pilier principale de l'assurance qualité en progammation
+<h2 id="Tests-unitaires">Tests unitaires<a class="anchor-link" href="#Tests-unitaires">&#182;</a></h2><p>Le pilier principal de l'assurance qualité en programmation
 est les tests unitaires. Les tests unitaires ont comme objectif de vérifier que
 mon code fait ce qu'il est censé faire.</p>
 
@@ -13236,9 +13236,9 @@ mon code fait ce qu'il est censé faire.</p>
 instanciées.</li>
 <li>Exercice: L'unité de code testée est lancée.</li>
 <li>Vérification: Le sortant de l'unité de code en question est comparé à sa
-valeur anticipé.</li>
+valeur anticipée.</li>
 <li>Ramassage (<code>tearDown</code>): les composantes nécessaires pour le test sont
-détruits.</li>
+détruites.</li>
 </ol>
 
 </div>
@@ -13247,7 +13247,7 @@ détruits.</li>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Un test unitaire est générallement conçu afin d'isoler une unité de code. Il
+<p>Un test unitaire est généralement conçu afin d'isoler une unité de code. Il
 est important de découpler les tests unitaires.   Nous allons commencer par
 nous habituer à la structure générale des tests. Le premier exemple est le
 script <code>utilities.py</code> et sa classe de tests dans <code>test_utilities.py</code>.</p>
@@ -13292,7 +13292,7 @@ script <code>utilities.py</code> et sa classe de tests dans <code>test_utilities
 <p>Nous
 retrouvons la structure habituelle des tests avec une classe de test. Remarquer
 que la classe commence par le mot-clé <code>Test</code> ce qui permet au module pytest de
-l'inclure. De plus, les tests dans la classe commence tous par le prefix <code>test_</code> pour la même raison.</p>
+l'inclure. De plus, les tests dans la classe commencent tous par le préfix <code>test_</code> pour la même raison.</p>
 
 </div>
 </div>
@@ -13328,9 +13328,9 @@ des tests.</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Pytest est un des principal module de test dans Python. Il supporte les tests
+<p>Pytest est un des principaux modules de test dans Python. Il supporte les tests
 unitaires classiques comme nous venons juste de voir. De plus, il permet de
-gérer les tests différamment avec des <em>fixture</em>. Nous allons refactoriser la
+gérer les tests différemment avec des <em>fixture</em>. Nous allons refactoriser la
 classe TestUtilities afin d'utiliser les <em>fixture</em>.
 Le ficher est <em>test_utilities_refactored.py</em></p>
 
@@ -13342,7 +13342,7 @@ Le ficher est <em>test_utilities_refactored.py</em></p>
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="nd">@pytest</span><span class="o">.</span><span class="n">fixture</span><span class="p">(</span><span class="n">autouse</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">scope</span><span class="o">=</span><span class="s1">&#39;module&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="nd">@pytest</span><span class="o">.</span><span class="n">fixture</span><span class="p">(</span><span class="n">scope</span><span class="o">=</span><span class="s1">&#39;module&#39;</span><span class="p">)</span>
 <span class="k">def</span> <span class="nf">create_converter</span><span class="p">():</span>
     <span class="n">converter</span> <span class="o">=</span> <span class="n">StringConverters</span><span class="p">()</span>
     <span class="k">yield</span> <span class="n">converter</span>
@@ -13358,13 +13358,20 @@ Le ficher est <em>test_utilities_refactored.py</em></p>
     <span class="n">actual_value</span> <span class="o">=</span> <span class="n">create_converter</span><span class="o">.</span><span class="n">translate_to_jadensmith</span><span class="p">(</span><span class="n">sentence</span><span class="p">)</span>
 
     <span class="k">assert</span> <span class="n">expected_value</span> <span class="o">==</span> <span class="n">actual_value</span>
-<span class="n">Les</span> <span class="n">_fixtures_</span> <span class="n">sont</span> <span class="n">une</span> <span class="n">fonctionnalité</span> <span class="n">très</span> <span class="n">puissante</span> <span class="n">de</span> <span class="n">pytest</span><span class="o">.</span>
 </pre></div>
 
     </div>
 </div>
 </div>
 
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Les <em>fixtures</em> sont une fonctionnalité très puissante de pytest.</p>
+
+</div>
+</div>
 </div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
@@ -13378,7 +13385,7 @@ Le ficher est <em>test_utilities_refactored.py</em></p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><em>pytest-cov</em> est un module supplémentaire nous permettant de visualiser la
 proportion du code testée. Il est facile de se restreindre à seulement quelques
-chemin possible par le code. Par exemple. si j'ai le code suivant:</p>
+chemins possibles par le code. Par exemple. si j'ai le code suivant:</p>
 
 </div>
 </div>
@@ -13486,7 +13493,7 @@ Un profilage est un ensemble de statistiques descriptives du temps d'éxécution
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Le module le plus populaire et utile est sans doute le module <code>cprofile</code>.
-Ce module est fait pour créer une profile d'éxécution et non afin d'analyse comparative, utiliser <code>timeit</code>dans ce contexte.</p>
+Ce module est fait pour créer une profile d'exécution et non afin d'analyse comparative, utiliser <code>timeit</code>dans ce contexte.</p>
 
 </div>
 </div>
