fix french typos in slides

--- a/test_project/tests_en.slides.html
+++ b/test_project/tests_en.slides.html
@@ -13202,7 +13202,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Tests-et-Profilage,-Python">Tests et Profilage, Python<a class="anchor-link" href="#Tests-et-Profilage,-Python">&#182;</a></h1>
+<h1 id="Tests-and-Profiling,-Python">Tests and Profiling, Python<a class="anchor-link" href="#Tests-and-Profiling,-Python">&#182;</a></h1>
 </div>
 </div>
 </div></section></section><section><section>
@@ -13479,7 +13479,7 @@ Note that the code is in <code>str</code> form which limits the testing possibil
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Profiling-en-Python">Profiling en Python<a class="anchor-link" href="#Profiling-en-Python">&#182;</a></h2><p>In addition to benchmarking, profiling can also be useful in order to better understand one's program.
+<h2 id="Profiling-in-Python">Profiling in Python<a class="anchor-link" href="#Profiling-in-Python">&#182;</a></h2><p>In addition to benchmarking, profiling can also be useful in order to better understand one's program.
 Profiling is a set of descriptive statistics on the execution time of the various components of a program.</p>
 
 </div>
